--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
+    "express-jwt": "^7.7.5",
     "express-react-views": "^0.11.0",
     "express-session": "^1.17.3",
     "helmet-crossdomain": "^0.5.0",
